@@ -1,5 +1,7 @@
 package com.saasai.config;
 
+import org.springframework.beans.factory.annotation.Value;
+
 import com.saasai.security.JwtAuthenticationFilter;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -22,6 +24,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Configuration
 @EnableWebSecurity
@@ -47,32 +50,24 @@ public class SecurityConfig {
 
     // 🎯 BỔ SUNG: Cấu hình CORS chi tiết cho môi trường Production (Vercel) và Local
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
+    public CorsConfigurationSource corsConfigurationSource(
+            @Value("${FRONTEND_ALLOWED_ORIGINS:http://localhost:5173}") String frontendAllowedOrigins) {
+
         CorsConfiguration configuration = new CorsConfiguration();
-        
-        // Cấp quyền cho Local và chính xác Domain Vercel của bạn thông quan
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:5173", 
-                "https://saa-s-zeta-six.vercel.app"
-        ));
-        
-        // Hỗ trợ đầy đủ các phương thức, đặc biệt phải có OPTIONS
+
+        var origins = Arrays.stream(frontendAllowedOrigins.split(","))
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .collect(Collectors.toList());
+
+        configuration.setAllowedOriginPatterns(origins); // linh hoạt cho wildcard và subdomains
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        
-        // Cho phép các Headers cần thiết, bao gồm Authorization và ngrok-skip-browser-warning để né bẫy ngrok
-        configuration.setAllowedHeaders(Arrays.asList(
-                "Authorization", 
-                "Content-Type", 
-                "Accept", 
-                "X-Requested-With", 
-                "ngrok-skip-browser-warning"
-        ));
-        
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L); // Trình duyệt cache cấu hình CORS trong 1 tiếng
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); // Áp dụng cho toàn bộ API
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
